assets/scss/media-queries.scss
// ------------------------------
// MEDIA QUERIES
// ------------------------------

@media all and (min-width: 1300px) {

}

// ------------------------------
// < 1100px
// ------------------------------

@media all and (max-width: 1100px) {

  .panel-cover__logo {
    width: 70px;
  }

  .panel-title {
    font-size: 2em;
  }

  .panel-subtitle {
    font-size: 1em;
  }

  .panel-cover__description {
    margin: 0 10px;
    font-size: .9em;
  }

  .navigation--social {
    margin-top: 5px;
    margin-left: 0;
  }

}

// ------------------------------
// < 960px
// ------------------------------

@media all and (max-width: 960px) {

  .btn-mobile-menu {
    display: block;
  }

  .panel-main {
    display: table;
    position: relative;
  }

    .panel-cover--collapsed {
      width: 100%;
      max-width: none;
    }

  .panel-main__inner {
    display: table-cell;
    padding: 60px 10%;
  }

  .panel-cover__description {
    display: block;
    max-width: 600px;
    margin: 0 auto;
  }

  .panel-cover__divider--secondary {
    display: none;
  }

  .panel-cover {
    width: 100%;
    height: 100%;
    background-position: center center;

    &.panel-cover--collapsed {
      display: block;
      position: relative;
      height: auto;
      padding: 0;
      background-position: center center;

      .panel-main__inner {
        display: block;
        padding: 70px 0 30px 0;
      }

      .panel-cover__logo {
        width: 60px;
        border-width: 2px;
      }

      .panel-cover__description {
        display: none;
      }

      .panel-cover__divider {
        display: none;
        margin: 1em auto;
      }

    }

  }

    .navigation-wrapper {
      display: none;
      position: fixed;
      top: 0;
      right: 0;
      left: 0;
      width: 100%;
      padding: 20px 0;
      background-image: linear-gradient(-225deg, #B7F8DB 0%, #50A7C2 100%);
      border-bottom: 1px solid rgba(255, 255, 255, 0.15);

      &.visible {
        display: block;
      }
    }

    .cover-navigation {
      display: block;
      position: relative;
      float: left;
      clear: left;
      width: 100%;

      .navigation {
        display: block;
        width: 100%;

        li {
          width: 80%;
          margin-bottom: .4em;
        }

      }

      &.navigation--social {
        padding-top: 5px;

        .navigation {

          li {
            display: inline-block;
            width: 25.8%;
          }

        }

      }

    }

    .content-wrapper {
      width: 80%;
      max-width: none;
      margin: 0 auto;
    }

    .content-wrapper__inner {
      margin-right: 0;
      margin-left: 0;
    }

    .navigation__item {
      width: 100%;
      margin: 0 0 .4em 0;
    }

}

// ------------------------------
// < 340px
// ------------------------------

@media all and (max-width: 340px) {

  .panel-main__inner {
    padding: 0 5%;
  }

  .panel-title {
    margin-bottom: .1em;
    font-size: 1.5em;
  }

  .panel-subtitle {
    font-size: .9em;
  }

  .btn {
    display: block;
    margin-bottom: .4em;
  }

}

// ------------------------------
// Dark Mode
// ------------------------------
@media (prefers-color-scheme: dark) {
    body {
        background-color: $primary-color-dark;
        color: $secondary-color-dark;
    }
    h1,
    h2,
    h3,
    h4,
    h5 {
        color: $secondary-color-dark;
    }
    a{
      color: darken($primary-color,10%);
    }
    a:hover {
        color: darken($secondary-color,10%);
    }
    .post-list__post-title a {
        color: $secondary-color-dark;
    }
    .post-list__post-title a:hover {
        color: darken($secondary-color,10%);
    }
    .post-list__divider {
        border-top: 1px solid #373E47;
    }
    table {
        color: $primary-color-dark;
        border: 2px solid #444c56;
    }
    table thead tr:first-child {
        background-color: #444c56;
        color: $secondary-color-dark;
    }
    table thead tr:last-child th {
        border-bottom: 1px solid #444c56;
    }
    table tbody td {
        border-bottom: 1px solid #444c56;
    }
    summary {
        background: #4d4d4d;
        color: $secondary-color-dark;
    }
    details {
        background: $primary-color-dark;
    }
    details[open] summary {
        background: $primary-color-dark;
        color: $secondary-color-dark;
    }
    details p {
        color: $secondary-color-dark;
    }
    code {
        background: #2D333B;
    }
    pre {
        background: #2D333B;
        border: none;
    }
    .highlight .n {
        color: #373E47;
    }
    .highlight .nv {
        color: #373E47;
    }
    .highlight .p {
        color: gray;
    }
    .read-more-item-dim {
        color: darken($primary-color,10%);
    }
    .gt-header-textarea {
        background-color: #1C2128;
    }
    .gt-header-textarea:hover {
        background-color: lighten(#1C2128, 20%);
    }
    .gt-container .gt-user .gt-ico svg {
        fill: $secondary-color-dark;
    }
    .gt-container a {
        color: $primary-color-dark;
    }
    .gt-container .gt-link{
        border-bottom: 1px dotted $primary-color-dark;
    }
    .gt-container .gt-btn {
        border: 1px solid $primary-color-dark;
        background-color: #1C2128;
        color: darken($primary-color,10%);
    }
    .gt-container .gt-btn-preview{
        background-color: #1C2128;
        color: darken($primary-color,10%);
    }
}

